static/css/style.css
body {
    display: flex;
    min-height: 100vh;
    flex-direction: column;
    background-color: #eeeeee;
    color: #424242;
  }

  main {
    flex: 1 0 auto;
  }

/*------------Navbar-----------*/

.brand-logo {
    letter-spacing: 1px;
}

.dropdown-button {
    letter-spacing: 1px;
}

/*------------Headers-----------*/

.page-head {
    text-align: center;
    letter-spacing: 1px;
    padding: 30px;
}

/*------------Recipes Page-----------*/
.filter-form {
    padding: 20px;
}

ul.dropdown-content.select-dropdown li span {
    color: #616161;
}

.collapsible-header {
    margin-bottom: 20px;
    background-color: #616161;
    color: #eeeeee;
}

.recipe-name-col {
    font-size: 18px;
    letter-spacing: .5px;
}

.collapsible-body {
    padding: 15px;
}

.add-recipe-row {
    margin-bottom: 50px;
}
/*------------Add Recipe Page-----------*/

.img-icon {
    padding-left: 0px !important;
}

.img-path {
    padding-left: 0px !important;
}

@media (max-width: 575.98px) {
    .img-path {
    margin-left: 2.5rem;
}
}

.lever {
    margin-left: 0px !important;
}

/*------------Buttons-----------*/

.btn {
    background-color: #fdd835;
    font-weight: bold;
    letter-spacing: 1px;
}

.btn:hover {
    background-color: #616161;
    color: #fdd835;
}

.btn-filter {
    margin-top: 25px; 
    width: 10rem;
}

.btn-img {
    width: 12rem;
}

.btn_small{
    height: 24px;
    width: 100px;
    line-height: 24px;
    margin: 5px 5px;
    padding: 0 0.5em;
} 

/*------------Footer-----------*/
.page-footer {
    padding-top: 0px;
}

.footer-row {
    margin-bottom: 0px;
    padding: 10px 0px;
}

footer ul li{
  display: inline;
}

.social-links li a i {
    font-size: 20px;
    font-weight: 400;
    line-height: 25px;
    letter-spacing: 3px;
    margin-right: 5px;
}

.social-links li a i:hover {
    font-weight: bolder;
    transition: all 0.3s ease-in-out;
    -moz-transition: all 0.3s ease-in-out;
    -webkit-transition: all 0.3s ease-in-out;
    -o-transition: all 0.3s ease-in-out;
}

.footer-copyright {
    text-align: center;
}

